--- a/darkhorse32-java-web13-servlet/pom.xml
+++ b/darkhorse32-java-web13-servlet/pom.xml
@@ -8,7 +8,9 @@
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>darkhorse32-java-web12-http-tomcat</artifactId>
+
+    <artifactId>darkhorse32-java-web13-servlet</artifactId>
+
     <packaging>war</packaging>
 
     <properties>
@@ -27,7 +29,31 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbutils</groupId>
+            <artifactId>commons-dbutils</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -43,5 +69,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
