--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>darkhorse32-java-web11-xml</module>
         <module>darkhorse32-java-web12-http-tomcat</module>
         <module>darkhorse32-java-web13-servlet</module>
+        <module>darkhorse32-java-web14-response</module>
     </modules>
     <packaging>pom</packaging>
 
