--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>darkhorse32-java-web17-jsp</module>
         <module>darkhorse32-java-web17-jsp-project</module>
         <module>darkhorse32-java-web18-el-jstl</module>
+        <module>darkhorse32-java-web19-transaction</module>
     </modules>
     <packaging>pom</packaging>
 
