--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>darkhorse32-java-web19-transaction</module>
         <module>darkhorse32-java-web20-crud</module>
         <module>darkhorse32-java-web21-page</module>
+        <module>darkhorse32-java-web22-ajax</module>
     </modules>
     <packaging>pom</packaging>
 
