--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>darkhorse32-java-web20-crud</module>
         <module>darkhorse32-java-web21-page</module>
         <module>darkhorse32-java-web22-ajax</module>
+        <module>darkhorse32-java-web23-listener</module>
     </modules>
     <packaging>pom</packaging>
 
