--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <module>darkhorse32-java-web24-filter</module>
         <module>darkhorse32-java-web35-hibernate-day01</module>
         <module>darkhorse32-java-web35-hibernate-day01-crm</module>
+        <module>darkhorse32-java-web36-hibernate-day02</module>
+        <module>darkhorse32-java-web36-hibernate-day02-crm</module>
     </modules>
     <packaging>pom</packaging>
 
