--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <module>darkhorse32-java-web36-hibernate-day02-crm</module>
         <module>darkhorse32-java-web37-hibernate-day03</module>
         <module>darkhorse32-java-web37-hibernate-day03-crm</module>
+        <module>darkhorse32-java-web38-hibernate-day04</module>
+        <module>darkhorse32-java-web38-hibernate-day04-crm</module>
     </modules>
     <packaging>pom</packaging>
 
