--- a/darkhorse32-java-web37-hibernate-day03-crm/pom.xml
+++ b/darkhorse32-java-web37-hibernate-day03-crm/pom.xml
@@ -109,6 +109,7 @@
             <version>3.4.1.Final</version>
         </dependency>
 
+        <!--hibernate-->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -124,6 +125,7 @@
             <artifactId>hibernate-commons-annotations</artifactId>
             <version>5.0.1.Final</version>
         </dependency>
+        <!--hibernate-->
         <dependency>
             <groupId>org.jboss</groupId>
             <artifactId>jandex</artifactId>
