--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>darkhorse32-java-web42-struts2-day04</module>
         <module>darkhorse32-java-web39-42-struts2-crm</module>
         <module>darkhorse32-java-web43-spring-day01</module>
+        <module>darkhorse32-java-web44-spring-day02</module>
     </modules>
     <packaging>pom</packaging>
 
