--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <module>darkhorse32-java-web46-spring-day04</module>
         <module>darkhorse32-java-web47-52-ssh-crm</module>
         <module>darkhorse32-java-web77-lucene</module>
+        <module>darkhorse32-java-web78-solr</module>
     </modules>
     <packaging>pom</packaging>
 
