--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <module>darkhorse32-java-web01-html</module>
         <module>darkhorse32-java-web02-css</module>
         <module>darkhorse32-java-web03-javascript</module>
+        <module>darkhorse32-java-web04-javascript</module>
     </modules>
     <packaging>pom</packaging>
 
