--- a/darkhorse32-java-web77-lucene/pom.xml
+++ b/darkhorse32-java-web77-lucene/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>darkhorse32-java-web77-lucene</artifactId>
 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
