--- a/darkhorse32-java-web78-solr/pom.xml
+++ b/darkhorse32-java-web78-solr/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>darkhorse32-java-web78-solr</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
