--- a/web46-spring-day04/src/main/webapp/WEB-INF/web.xml
+++ b/web46-spring-day04/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,20 @@
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
 
+
+    <!-- 扩大session作用范围
+      注意: 任何filter一定要在struts的filter之前调用
+   -->
+    <filter>
+        <filter-name>openSessionInView</filter-name>
+        <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>openSessionInView</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
     <!-- struts2核心过滤器 -->
     <!--struts2 2.5以下是org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter -->
     <!--struts2 2.5以上是org.apache.struts2.dispatcher.filter.StrutsPrepareAndExecuteFilter-->
@@ -34,5 +48,4 @@
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
 </web-app>
