--- a/web77-lucene/pom.xml
+++ b/web77-lucene/pom.xml
@@ -44,11 +44,18 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.wltea.ik-analyzer</groupId>-->
+        <!--    <artifactId>ik-analyzer</artifactId>-->
+        <!--    <version>8.2.0</version>-->
+        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.github.magese/ik-analyzer -->
         <dependency>
-            <groupId>org.wltea.ik-analyzer</groupId>
+            <groupId>com.github.magese</groupId>
             <artifactId>ik-analyzer</artifactId>
             <version>8.2.0</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
