--- a/web80-93-cube-shop/cube-shop-portal-web/pom.xml
+++ b/web80-93-cube-shop/cube-shop-portal-web/pom.xml
@@ -116,11 +116,6 @@
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-
 
         <!-- 时间操作组件 -->
         <dependency>
@@ -167,7 +162,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- 日志处理 -->
@@ -224,6 +218,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.4.2</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
