--- a/web80-93-cube-shop/cube-shop-search/cube-shop-search-interface/pom.xml
+++ b/web80-93-cube-shop/cube-shop-search/cube-shop-search-interface/pom.xml
@@ -27,6 +27,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.4.2</version>
                 <configuration>
                     <skipTests>true</skipTests>
                     <testFailureIgnore>true</testFailureIgnore>
