--- a/web80-93-cube-shop/cube-shop-sso-web/pom.xml
+++ b/web80-93-cube-shop/cube-shop-sso-web/pom.xml
@@ -8,12 +8,8 @@
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.phoenix</groupId>
     <artifactId>cube-shop-sso-web</artifactId>
     <packaging>war</packaging>
-
-
 
     <dependencies>
         <dependency>
@@ -21,8 +17,6 @@
             <artifactId>cube-shop-sso-interface</artifactId>
             <version>1.0.0</version>
         </dependency>
-
-
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -52,7 +46,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
-
 
         <!--      mybatis 分页插件      -->
         <dependency>
@@ -118,11 +111,6 @@
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-
 
         <!-- 时间操作组件 -->
         <dependency>
@@ -169,7 +157,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- 日志处理 -->
@@ -229,6 +216,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.4.2</version>
                 <configuration>
                     <skipTests>true</skipTests>
                     <testFailureIgnore>true</testFailureIgnore>
