--- a/mine-activiti6-samples/pom.xml
+++ b/mine-activiti6-samples/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>activiti6-sample-config</module>
         <module>activiti6-sample-config-db</module>
+        <module>activiti6-sample-config-mdc</module>
     </modules>
 
     <artifactId>mine-activiti6-samples</artifactId>
