--- a/mine-activiti6-samples/pom.xml
+++ b/mine-activiti6-samples/pom.xml
@@ -15,6 +15,8 @@
         <module>activiti6-sample-config-mdc</module>
         <module>activiti6-sample-config-history</module>
         <module>activiti6-sample-config-event-log</module>
+        <module>activiti6-sample-config-event-listener</module>
+        <module>activiti6-sample-config-interceptor</module>
     </modules>
 
     <artifactId>mine-activiti6-samples</artifactId>
