activiti6 jobExecutor；activiti集成spring

--- a/mine-activiti6-samples/pom.xml
+++ b/mine-activiti6-samples/pom.xml
@@ -17,6 +17,8 @@
         <module>activiti6-sample-config-event-log</module>
         <module>activiti6-sample-config-event-listener</module>
         <module>activiti6-sample-config-interceptor</module>
+        <module>activiti6-sample-config-job-executor</module>
+        <module>activiti6-sample-config-spring</module>
     </modules>
 
     <artifactId>mine-activiti6-samples</artifactId>
