--- a/mine-activiti6-samples/pom.xml
+++ b/mine-activiti6-samples/pom.xml
@@ -20,6 +20,8 @@
         <module>activiti6-sample-config-job-executor</module>
         <module>activiti6-sample-config-spring</module>
         <module>activiti6-sample-core-api-repository</module>
+        <module>activiti6-sample-core-api-runtime</module>
+        <module>activiti6-sample-core-api-task</module>
     </modules>
 
     <artifactId>mine-activiti6-samples</artifactId>
