--- a/mine-activiti6-samples/activiti6-sample-core-api-identity/pom.xml
+++ b/mine-activiti6-samples/activiti6-sample-core-api-identity/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>activiti6-sample-config-job-executor</artifactId>
+    <artifactId>activiti6-sample-core-api-identity</artifactId>
 
     <packaging>jar</packaging>
 
@@ -21,6 +21,12 @@
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-engine</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+        <!--activiti6与spring整合的包-->
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring</artifactId>
             <version>6.0.0</version>
         </dependency>
         <dependency>
@@ -54,15 +60,13 @@
             <artifactId>druid</artifactId>
             <version>1.1.20</version>
         </dependency>
-        <!--activiti6与spring整合的包-->
-        <dependency>
-            <groupId>org.activiti</groupId>
-            <artifactId>activiti-spring</artifactId>
-            <version>6.0.0</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 
@@ -81,5 +85,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
