--- a/mine-activiti6-samples/pom.xml
+++ b/mine-activiti6-samples/pom.xml
@@ -22,6 +22,7 @@
         <module>activiti6-sample-core-api-repository</module>
         <module>activiti6-sample-core-api-runtime</module>
         <module>activiti6-sample-core-api-task</module>
+        <module>activiti6-sample-core-api-identity</module>
     </modules>
 
     <artifactId>mine-activiti6-samples</artifactId>
@@ -30,5 +31,18 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <!--不使用parent方式进行依赖,需要scope和type设置-->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.0.0.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
