activiti6 historyService;managementService

--- a/mine-activiti6-samples/pom.xml
+++ b/mine-activiti6-samples/pom.xml
@@ -23,6 +23,7 @@
         <module>activiti6-sample-core-api-runtime</module>
         <module>activiti6-sample-core-api-task</module>
         <module>activiti6-sample-core-api-identity</module>
+        <module>activiti6-sample-core-api-history</module>
     </modules>
 
     <artifactId>mine-activiti6-samples</artifactId>
