--- a/mine-activiti6-samples/pom.xml
+++ b/mine-activiti6-samples/pom.xml
@@ -25,6 +25,7 @@
         <module>activiti6-sample-core-api-identity</module>
         <module>activiti6-sample-core-api-history</module>
         <module>activiti6-sample-dbentity</module>
+        <module>activiti6-springboot</module>
     </modules>
 
     <artifactId>mine-activiti6-samples</artifactId>
