--- a/web73-mybatis-spring/pom.xml
+++ b/web73-mybatis-spring/pom.xml
@@ -15,6 +15,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <spring.version>4.2.4.RELEASE</spring.version>
     </properties>
 
