--- a/web80-93-cube-shop/pom.xml
+++ b/web80-93-cube-shop/pom.xml
@@ -36,6 +36,7 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.12</junit.version>
         <spring.version>4.2.4.RELEASE</spring.version>
         <mybatis.version>3.2.8</mybatis.version>
@@ -322,6 +323,5 @@
             </plugins>
         </pluginManagement>
     </build>
-
 
 </project>
